--- a/prep for test - hw06/frontend/src/components/layout/layout/Layout.css
+++ b/prep for test - hw06/frontend/src/components/layout/layout/Layout.css
@@ -23,19 +23,9 @@ body,
     grid-column: 1 / span 2;
 }
 
-.Layout aside:nth-child(0) {
-    grid-row: 2;
-    grid-column: 1;
-}
-
-.Layout aside:nth-child(1) {
-    grid-row: 3;
-    grid-column: 1;
-}
-
 .Layout main {
     grid-row: 2 / span 2;
-    grid-column: 2;
+    grid-column: 1 / span 2;
     overflow: scroll;
 }
 
